[gd_scene load_steps=20 format=3 uid="uid://cgp6gsowxrm0b"]

[ext_resource type="Script" path="res://Enemies/scripts/natural_killer_cell.gd" id="1_gbspc"]
[ext_resource type="Texture2D" uid="uid://yd7ae7bt311h" path="res://Enemies/Assets/NaturalKillerCell/NaturalKillerCellAttack.png" id="2_t3rc2"]
[ext_resource type="Texture2D" uid="uid://dawpr5btbjnlf" path="res://Enemies/Assets/NaturalKillerCell/NATURAL KILLER CELLS.png" id="2_tgj28"]
[ext_resource type="AudioStream" uid="uid://c3qr88ey3tiqj" path="res://SFX/nt_killer.mp3" id="4_2lq4d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uqpuq"]
atlas = ExtResource("2_t3rc2")
region = Rect2(0, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_emyto"]
atlas = ExtResource("2_t3rc2")
region = Rect2(52, 0, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5474"]
atlas = ExtResource("2_t3rc2")
region = Rect2(0, 52, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4rrv"]
atlas = ExtResource("2_t3rc2")
region = Rect2(52, 52, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_473ai"]
atlas = ExtResource("2_t3rc2")
region = Rect2(0, 104, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfa2e"]
atlas = ExtResource("2_tgj28")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_auhbh"]
atlas = ExtResource("2_tgj28")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_if7de"]
atlas = ExtResource("2_tgj28")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfic3"]
atlas = ExtResource("2_tgj28")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsstg"]
atlas = ExtResource("2_tgj28")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_y8p3g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqpuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emyto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5474")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4rrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_473ai")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfa2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auhbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if7de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfic3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsstg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_oalgo"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ojmti"]
radius = 36.0

[sub_resource type="SystemFont" id="SystemFont_xsl75"]
font_names = PackedStringArray("Consolas")
subpixel_positioning = 0
multichannel_signed_distance_field = true

[sub_resource type="LabelSettings" id="LabelSettings_78yye"]
line_spacing = 2.0
font = SubResource("SystemFont_xsl75")
outline_size = 1
outline_color = Color(0.530242, 0, 0.0861157, 1)
shadow_size = 2

[node name="NaturalKillerCell" type="CharacterBody2D"]
collision_layer = 64
collision_mask = 4
script = ExtResource("1_gbspc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y8p3g")
animation = &"Attack"

[node name="HitBox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_oalgo")

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_ojmti")

[node name="Boom" type="Timer" parent="."]

[node name="tookDamage" type="Timer" parent="."]

[node name="DisplayDmg" type="Label" parent="."]
offset_left = 7.0
offset_top = 2.0
offset_right = 30.0
offset_bottom = 25.0
text = "30"
label_settings = SubResource("LabelSettings_78yye")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Healthbar" type="ProgressBar" parent="."]
modulate = Color(0.886275, 0.00392157, 0.886275, 1)
offset_left = -16.0
offset_top = 17.0
offset_right = 16.0
offset_bottom = 23.0
show_percentage = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_2lq4d")
volume_db = -1.0
bus = &"Sfx"

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Boom" to="." method="_on_boom_timeout"]
[connection signal="timeout" from="tookDamage" to="." method="_on_took_damage_timeout"]
